--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -78,3 +78,18 @@
     color: var(--text);
     cursor: not-allowed;
 }
+
+@media(max-width: 457px) {
+    .countdownContainer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        text-align: center;
+    }
+
+    .countdownContainer span{
+        font-size: 5rem;
+        margin: 0 0.5rem;
+    }
+}
