--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,6 +30,12 @@
     }
 }
 
+@media(max-width: 457px) {
+    html{
+        font-size: 65.5%;
+    }
+}
+
 body{
     background-color: var(--background);
     color: var(--text);
